// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csv arrays array of one item is still parsed as csv array 1`] = `
Array [
  "red",
]
`;

exports[`csv arrays other key will not be handled 1`] = `false`;

exports[`csv arrays parses a csv string to an array 1`] = `true`;

exports[`csv arrays parses a csv string to an array 2`] = `
Array [
  "red",
  "green",
  "yellow",
]
`;

exports[`default query parser empty query string 1`] = `Object {}`;

exports[`default query parser empty query string 2`] = `Object {}`;

exports[`default query parser same key, multiple times 1`] = `
Object {
  "foo": Array [
    "1",
    "2",
    "3",
  ],
}
`;

exports[`default query parser same key, multiple times 2`] = `
Object {
  "foo": "3",
}
`;

exports[`default query parser simple query string 1`] = `
Object {
  "bar": Array [
    "foobar",
  ],
  "foo": Array [
    "bar",
  ],
}
`;

exports[`default query parser simple query string 2`] = `
Object {
  "bar": "foobar",
  "foo": "bar",
}
`;
